# bazel-python-coverage-issue

./: BUILD.bazel  MODULE.bazel  README.md  test.py
